# argus

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  README.md  add_all_aliases.sh  add_missing_aliases.sh  add_org_aliases.sh  build.rs  dump.sh  entity_alias_improvement.md  env.template  manage_aliases.sh  no_match.sh  places.json.template  run.sh  test_alias_system.sh
.github/workflows/: rustfmt.yml
assets/: argus-logo-simple.psd  argus-logo.psd
docs/: manage_aliases_usage.md  no_think_mode.md
memory-bank/: .clinerules  activeContext.md  entity_matching_tools.md  manual-TODO.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: cluster_merge_schema.sql  cluster_schema.sql
src/: analysis_worker.rs  app.rs  app_api.rs  build.rs  clustering.rs  common.rs  db.rs  decision_worker.rs  environment.rs  lib.rs  llm.rs  logging.rs  main.rs  metrics.rs  prompts.rs  rss.rs  slack.rs  util.rs  vector.rs  vector_db.rs  web.rs  worker.rs
src/app/: README.md  api.rs  util.rs
src/clustering/: assignment.rs  entities.rs  mod.rs  significance.rs  summary.rs  temporal.rs  tests.rs  types.rs  util.rs
src/clustering/merging/: core.rs  history.rs  mod.rs  similarity.rs
src/db/: article.rs  cluster.rs  core.rs  device.rs  mod.rs  queue.rs  schema.rs
src/db/entity/: alias.rs  core.rs  mod.rs  relation.rs
src/entity/: aliases.rs  extraction.rs  matching.rs  mod.rs  normalizer.rs  repository.rs  types.rs
src/prompt/: analysis.rs  common.rs  decisions.rs  entity.rs  insights.rs  mod.rs  relevance.rs  scoring.rs  summarization.rs
src/rss/: client.rs  fetcher.rs  mod.rs  parser.rs  test.rs  types.rs  util.rs
src/vector/: config.rs  embedding.rs  mod.rs  search.rs  similarity.rs  storage.rs  types.rs
src/workers/: common.rs  mod.rs
src/workers/analysis/: entity_handling.rs  mod.rs  processing.rs  quality.rs  similarity.rs  worker_loop.rs
src/workers/decision/: extraction.rs  mod.rs  processing.rs  threat.rs  worker_loop.rs
test_data/: 9to5mac.com-1110--Icmt1Vfi.json  9to5mac.com-1110--LkdVsPKY.json  9to5mac.com-1110--MpHTcmXl.json  9to5mac.com-1110--hdmkAcbX.json  9to5mac.com-1110--ntAw2oNr.json  bitcoincore.org-1110--0Lzs0T00.json  bitcoincore.org-1110--4SVMp3AP.json  bitcoincore.org-1110--VkZq4jnN.json  bitcoincore.org-1110--tAlBm5MZ.json  finance.yahoo.com-1110--JdPZwUJA.json  finance.yahoo.com-1110--rGmjGVlj.json  news.ycombinator.com-1110--9MUm9tA2.json  news.ycombinator.com-1110--FPNjIx0B.json  news.ycombinator.com-1110--c2Qk9E51.json  rss.slashdot.org-1110--mk1d9OmH.json  rss.slashdot.org-1110--tVCBkmyg.json  www.lanazione.it-1110--4pJceIkY.json  www.lanazione.it-1110--C9mhJ4oy.json  www.lanazione.it-1110--FKba2d0F.json  www.lanazione.it-1110--Peshx5bP.json  www.lanazione.it-1110--QamFUzt3.json  www.tag1consulting.com-1110--LOOVZPLE.json  www.tag1consulting.com-1110--LdfNvkmB.json  www.tomshardware.com-1110--csCUPZr8.json
