[package]
name = "argus"
version = "0.10.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-openai = "0.25.0"
chrono = "0.4"
emailmessage = "0.2"
feed-rs = "2.1"
futures = "0.3"
jsonwebtoken = "9.0"
lazy_static = "1.5"
ollama-rs = "0.2.0"
once_cell = "1.19"
rand = "0.8"
readability = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
urlnorm = "0.1.6"
uuid = "1.11"

[[bin]]
name = "rss_fetcher"
path = "src/bin/rss_fetcher.rs"

